add utilize functions